--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               Focando no desenvolvimento de novos padrões de comportamento
               em pessoas e negócios para que possam ir para o <span class="cor-verde">próximo nível</span>.
             </p>
-            <button class="text-start bb d-flex justify-content-start btn btn-success btn-lg btn-colors">QUERO SABER MAIS !</button>
+            <button onclick="window.location.href = 'https://pay.hotmart.com/S92688986J?off=g0wbfdly&checkoutMode=10&bid=1714399425922'"  class="text-start bb d-flex justify-content-start btn btn-success btn-lg btn-colors">QUERO SABER MAIS !</button>
           </div>
           <div class="col-md-6 order-md-2 d-flex justify-content-center align-items-center">
             <img src="./assets/imgs/logo-solo.png" alt="logo-com-sifrão" class="logo-sifrao rotate-left-infinite img-c">
@@ -173,7 +173,7 @@
       </div>
 
       <div class="d-flex justify-content-center mb-5 m-2">
-      <button class=" btn btn-success btn-lg btn-colors">QUERO RESOLVER ESSES PROBLEMAS!</button>
+      <button onclick="window.location.href = 'https://pay.hotmart.com/S92688986J?off=g0wbfdly&checkoutMode=10&bid=1714399425922'"  class=" btn btn-success btn-lg btn-colors">QUERO RESOLVER ESSES PROBLEMAS!</button>
       </div>
     </section>
 
@@ -271,7 +271,7 @@
       </div>
       
       <div class="d-flex justify-content-center mb-5 mt-5">
-        <button class=" btn btn-success btn-lg btn-colors">FIQUEI INTERESSADO !</button>
+        <button onclick="window.location.href = 'https://pay.hotmart.com/S92688986J?off=g0wbfdly&checkoutMode=10&bid=1714399425922'" class=" btn btn-success btn-lg btn-colors">FIQUEI INTERESSADO !</button>
         </div>
     </section>
 
@@ -304,7 +304,7 @@
           </p>
         </div>
           <div class="d-flex justify-content-center mt-2">
-            <button class="text-center btn btn-success btn-lg btn-colors">TRANSFORME SUA EXPERINÊNCIA</button>
+            <button onclick="window.location.href = 'https://pay.hotmart.com/S92688986J?off=g0wbfdly&checkoutMode=10&bid=1714399425922'"  class="text-center btn btn-success btn-lg btn-colors">TRANSFORME SUA EXPERINÊNCIA</button>
           </div>
         </div>
       </div>
@@ -328,8 +328,8 @@
           <div class="card-body rounded">
             <h5 class="card-title text-start fs-2 text-decoration-underline text-success">Treinamento em Consultoria de Gustavo Pelicer</h5>
             <p class="card-text text-start fs-5">Desperte o potencial máximo do seu negócio com o nosso abrangente treinamento em consultoria conduzido por Gustavo Pelicer. Por meio de módulos interativos e práticos.</p>
-            <h1 class="card-text text-start text-decoration-underline">R$ 999,00</h1>
-            <button class="text-center btn btn-success btn-lg px-5 pe-5 mt-4 mb-4">COMPRAR PLANO</button>
+            <h1 class="card-text text-start text-decoration-underline">R$ 1200,00</h1>
+            <button onclick="window.location.href = 'https://pay.hotmart.com/S92688986J?bid=1714399436223'" class="text-center btn btn-success btn-lg px-5 pe-5 mt-4 mb-4">COMPRAR PLANO</button>
             <p class="card-text text-start"><i class="bi bi-box-arrow-in-right text-success fs-4 me-2"></i><small class="text-body-secondary ">Aprofundar Conhecimentos</small></p>
             <p class="card-text text-start"><i class="bi bi-box-arrow-in-right text-success fs-4 me-2"></i><small class="text-body-secondary ">Desenvolver Habilidades Práticas</small></p>
             <p class="card-text text-start"><i class="bi bi-box-arrow-in-right text-success fs-4 me-2"></i><small class="text-body-secondary ">Acessar Atualizações Constantes</small></p>
@@ -341,7 +341,7 @@
             <h5 class="card-title text-start fs-2 text-decoration-underline text-success">Mentoria</h5>
             <p class="card-text text-start fs-5">Eleve sua jornada empreendedora com mentoria personalizada de Gustavo Pelicer. Explore oportunidades únicas, receba orientação estratégica e alcance seus objetivos</p>
             <h1 class="card-text text-start text-decoration-underline">Sob-Consulta</h1>
-            <button class="text-center btn btn-success btn-lg px-5 pe-5 mt-4 mb-4">COMPRAR PLANO</button>
+            <button onclick="window.location.href = 'https://api.whatsapp.com/send?phone=5511937123927'" class="text-center btn btn-success btn-lg px-5 pe-5 mt-4 mb-4">COMPRAR PLANO</button>
             <p class="card-text text-start"><i class="bi bi-box-arrow-in-right text-success fs-4 me-2"></i><small class="text-body-secondary ">Orientação Estratégica Personalizada</small></p>
             <p class="card-text text-start"><i class="bi bi-box-arrow-in-right text-success fs-4 me-2"></i><small class="text-body-secondary ">Desenvolvimento de Liderança</small></p>
             <p class="card-text text-start"><i class="bi bi-box-arrow-in-right text-success fs-4 me-2"></i><small class="text-body-secondary ">Tomada de Decisões Informadas</small></p>
@@ -352,8 +352,8 @@
           <div class="card-body rounded">
             <h5 class="card-title text-start fs-2 text-decoration-underline text-success">BPO</h5>
             <p class="card-text text-start fs-5">Otimize suas operações financeiras com nossos serviços BPO (Business Process Outsourcing). Ao escolher nosso serviço BPO</p>
-            <h1 class="card-text text-start text-decoration-underline">R$ 1.500,00</h1>
-            <button class="text-center btn btn-success btn-lg px-5  pe-5 mt-4 mb-4">COMPRAR PLANO</button>
+            <h1 class="card-text text-start text-decoration-underline">Sob-Consulta</h1>
+            <button onclick="window.location.href = 'https://api.whatsapp.com/send?phone=5511937123927'" class="text-center btn btn-success btn-lg px-5  pe-5 mt-4 mb-4">COMPRAR PLANO</button>
             <p class="card-text text-start"><i class="bi bi-box-arrow-in-right text-success fs-4 me-2"></i><small class="text-body-secondary ">Soluções Financeiras Integradas</small></p>
             <p class="card-text text-start"><i class="bi bi-box-arrow-in-right text-success fs-4 me-2"></i><small class="text-body-secondary ">omunicação Transparente</small></p>
             <p class="card-text text-start"><i class="bi bi-box-arrow-in-right text-success fs-4 me-2"></i><small class="text-body-secondary ">Resultados Mensuráveis</small></p>
