html - Área de membros

--- a/Gustavo Pelicer/projeto/index.html
+++ b/Gustavo Pelicer/projeto/index.html
@@ -57,6 +57,9 @@
             <li class="nav-item">
               <a class="nav-link mx-3 text-light icone" href="#contato">Contato</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link mx-3 text-light icone" href="https://app.pfadvisors.com.br">Área de membros</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -451,6 +454,12 @@
     </div>
 
   </section>
+
+    <section>
+      <div class="d-flex justify-content-center pb-5 ">
+        <button onclick="window.location.href = 'https://app.pfadvisors.com.br'"  class="text-center btn btn-success btn-lg btn-colors p-4">ÁREA DE MEMBROS</button>
+      </div>
+    </section>
 
   </main>
 
